--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "devDependencies": {
     "@tinacms/cli": "^1.6.4",
     "@types/node": "^22.5.5",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.12"
+    "eslint-config-next": "^14.2.12",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   }
 }
