--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "embla-carousel-react": "^8.3.0",
+    "init": "^0.1.2",
     "next": "^14.2.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "shadcn": "^2.1.0",
     "tinacms": "^2.2.4",
     "typescript": "5.5.2"
   },
