fix: shadcn reinstall for header

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     ],
     "strictNullChecks": true,
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "react": [ "./node_modules/@types/react" ]
     }
   },
   "include": [
