--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
     "init": "^0.1.2",
+    "lucide-react": "^0.447.0",
     "next": "^14.2.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "shadcn": "^2.1.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "tinacms": "^2.2.4",
     "typescript": "5.5.2"
   },
